# noticov

./: .gitignore  LICENSE  README.md  pyproject.toml
TOHacks/: accounts.html  index.html  products.html
noticov/: app.py  exceptions.py  logging.py
noticov/backend/: base.py  postgresql.py
noticov/backend/tables/: __init__.py
noticov/covidstats/: base.py  exceptions.py  india.py  india_resources.py
noticov/covidstats/countries/: __init__.py
noticov/covidstats/data/: __init__.py  covid.py  medical_beds.py
noticov/dispatcher/: courier.py
noticov/frontend/: __init__.py  __main__.py
noticov/frontend/static/: accounts.html  index.html  login.html  products.html
noticov/frontend/static/js/: tooplate-scripts.js
noticov/frontend/templates/: index.html
noticov/geolocation/: location.py
