[tool.poetry]
name = "noticov"
version = "0.1.0"
description = "Hightly adaptive notification covid data accumulator and distributor"
authors = ["Srevin Saju <srevinsaju@sugarlabs.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
requests = "^2.25.1"
psycopg2-binary = "^2.8.6"
geocoder = "^1.38.1"
psycopg2 = "^2.8.6"
coloredlogs = "^15.0"
SQLAlchemy = "^1.4.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
